# snake

./: Makefile  README.md  pyproject.toml
snake/: __init__.py  board.py  checkerboard.py  classes.py  cmd_line.py  dir.py  exceptions.py  fruit.py  game.py  game_object.py  main.py  observer.py  score.py  scores.py  snake.py  state.py  subject.py  tile.py
tests/: test_0100_tile.py  test_0200_fruit.py  test_0300_snake.py
