[tool.poetry]
name = "snake"
version = "0.1.0"
description = ""
authors = ["Martin Zadora <martin.zadora@etu.minesparis.psl.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
snake = "snake.main:snake"